<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CCFFFF">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/registration_title"
        android:layout_marginTop="10sp"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="#336666"/>

    <EditText
        android:id="@+id/firstname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:layout_marginTop="30sp"
        android:hint="@string/first_name"
        android:textSize="20sp"
        android:inputType="text"/>


    <EditText
        android:id="@+id/lastname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/firstname"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:hint="@string/last_name"
        android:textSize="20sp"
        android:inputType="text"/>

    <EditText
        android:id="@+id/graduation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lastname"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:hint="@string/grad_year"
        android:textSize="20sp"
        android:inputType="number"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/graduation"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:hint="@string/email"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:hint="@string/password"
        android:textSize="20sp" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="100sp"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_centerInParent="true"
        android:layout_marginTop="5sp"
        android:text="@string/register_button"
        android:textSize="15sp" />

</RelativeLayout>