<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".AuctionActivity">

    <TextView
        android:id="@+id/auctionTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/auction_live" />

    <TextView
        android:id="@+id/leadBidder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lead_bid"
        android:textSize="20sp"/>
    <TextView
        android:id="@+id/timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_remaining"
        android:textSize="20sp"
        android:layout_marginTop="5sp"/>

    <TextView
        android:id="@+id/number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FF0000"
        android:textSize="20sp" />

    <FrameLayout
        android:id="@+id/itemContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true" />

    <LinearLayout
        android:id="@+id/auctionButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/startButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_auction" />

        <Button
            android:id="@+id/nextItemButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:text="@string/next_item" />
    </LinearLayout>

    <TextView
        android:id="@+id/userBidItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/auction_user_item"
        android:textSize="20sp"
        android:layout_marginTop="5sp"
        android:textColor="#FFCC00"/>

</LinearLayout>