<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity"
    android:gravity="center"
    android:padding="30dp"
    android:background="@drawable/login_gradient"
    >

    <EditText
        android:id="@+id/emailInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:textSize="20sp"
        android:inputType="textEmailAddress"
        android:textColorHint="#fff"
        android:drawablePadding="12dp"
        android:maxLines="1"
        android:background="@null"
        android:layout_marginTop="10sp"
        android:drawableStart="@drawable/ic_user"
        android:layout_marginBottom="10dp"
        />

    <view
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#f9d7db"/>

    <EditText
        android:id="@+id/passwordInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:textSize="20sp"
        android:inputType="textPassword"
        android:textColorHint="#fff"
        android:drawablePadding="12dp"
        android:maxLines="1"
        android:background="@null"
        android:layout_marginTop="10sp"
        android:drawableStart="@drawable/ic_key"
        android:layout_marginBottom="10dp"
        />
    <view
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#f9d7db"/>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="100sp"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordInput"
        android:layout_centerInParent="true"
        android:layout_marginTop="20sp"
        android:text="@string/login_button"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/registerLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/loginButton"
        android:layout_marginTop="25sp"
        android:text="@string/new_user"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="#FF0000"
        />

</LinearLayout>