<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:gravity="center">
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="5dp"
        app:cardElevation="10dp"
        app:cardBackgroundColor="#CC3636"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
            android:id="@+id/delete_modal_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete_modal_title"
            android:gravity="center_horizontal"
            android:textSize="20sp"
            android:layout_marginBottom="20dp"
            android:textColor="#fff"
            android:fontFamily="@font/poppins"
            />
            <LinearLayout
                android:layout_width="match_parent"
                android:gravity="center_horizontal"
                android:layout_margin="10dp"
                android:layout_below="@+id/delete_modal_title"
                android:layout_height="wrap_content">
        <Button
            android:id="@+id/delete_modal_no_button"
            android:layout_width="wrap_content"
            android:text="@string/delete_modal_no"
            android:background="@drawable/button_background"
            android:textColor="#673AB7"
            android:layout_marginEnd="10dp"
            android:layout_height="wrap_content" />
            <Button
                android:id="@+id/delete_modal_yes_button"
                android:layout_width="wrap_content"
                android:textColor="#673AB7"
                android:text="@string/delete_modal_yes"
                android:layout_marginStart="10dp"
                android:background="@drawable/button_background"
                android:layout_height="wrap_content" />

            </LinearLayout>

        </RelativeLayout>


    </android.support.v7.widget.CardView>

</RelativeLayout>